# era_gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml
bagfiles/: cmd_vel_r0.bag
cfg/: test.cfg
config/: hero1_costmap_2d.yaml  hero2_costmap_2d.yaml  hero3_costmap_2d.yaml  r0.lua  r0_costmap_2d.yaml  r1.lua  r1_costmap_2d.yaml
include/: combine_grids.h  coordinate_conversions.h
launch/: GPU_object_detection.launch  amcl.launch  carla_three_cars_multicast.launch  carla_two_cars.launch  cartographer.launch.xml  costmap_2d.yaml  detection_VM1.launch  detection_VM_2_nomask.launch  era.launch  era_auto.launch  era_auto_callgrind.launch  era_melodic.launch  era_new.launch  era_no_gui.launch  era_playback.launch  era_playback_melodic.launch  era_remove.launch  era_single.launch  era_single_melodic.launch  era_single_melodic_pi.launch  era_single_robot.launch  era_two_robots.launch  gmapping.launch.xml  hector_mapping.launch.xml  keyboard_teleop.launch  kobuki.launch.xml  kobuki_auto.launch.xml  kobuki_auto_callgrind.launch.xml  object_detection.launch  object_detection_MaskRCNN.launch  object_detection_MobileNet.launch  occupancy_grid.launch  occupancy_grid_labeler.launch  occupancy_grid_test.launch  robot.launch  rosconsole.config  roscore_service.sh  simple_box.urdf  turtlebot3_gmapping.launch  turtlebot3_navigation.launch  (+5 more)
launch/extras/: gmapping_auto_callgrind.launch.xml
msg/: DetectionBox.msg  DetectionBoxList.msg  ERAMsg.msg  ERAOccupancyGrid.msg
rviz/: era.rviz  era_single_robot.rviz
scripts/: bot_actions.py  detection_tensorflow.py  feature_matcher.py  gpu_detection_tensorflow.py  hmi.py  run_callgrind.py  spawn_carla_npc.py  test.py  tf_model1.py  tf_model1_nomask.py  transform_laser_data.py
src/: ERAmsgBuilder.cpp  ERAmsgInterpreter.cpp  bot_actions.py  bot_rotator  bot_wanderer  callgrind.out.2112  callgrind.out.2112.1  combine_grids.c  combine_grids.cpp  coordinate_conversions.cpp  fake_laser.cpp  infinite_loop  infinite_loop.c  main.c  map.pgm  map.yaml  map_fuser.cpp  message_generator.cpp  object_tracker_single.cpp  occgrid.c  occgrid.h  occgrid_node.cpp  occupancy_grid_labeler.cpp  occupancy_grid_node.cpp  run_callgrind  run_callgrind.py  run_rosbag  script_constants.sh  transform_laser_data.py  transmitter.cpp  velodyne_plugin.cc
srv/: SceneBBox.srv
utils/: extract_rates.py  outputs_v3_plots.py  outputs_v4_plots.py  parse_plot_perf_stat.py  profile_era.py  run_callgrind.sh  run_rosbag.sh
worlds/: empty_world.launch  era.world  playground.world
xacro/: hexagons.urdf.xacro  kinect.urdf.xacro  kobuki.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  turtlebot_common_library.urdf.xacro  turtlebot_gazebo.urdf.xacro
